--- a/firstNode/404.html
+++ b/firstNode/404.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8">
 		<title></title>
 	</head>
 	<body>
-		this is a index.html
+		this is a 404.html
 	</body>
 </html>
